--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@
 
 }
 .body{
-    width: 1920px;
+    width: 100%
 }
 .header{
     background: rgba(255, 144, 14, 0.1);
 }
 
-/* Navbar Style */
+/*------------ Navbar Style----------------- */
 .nav-container{
     display: flex;
     justify-content: space-between;
@@ -44,7 +44,7 @@
     text-align: center;
     color: #424242;
 }
-/* header article styles */
+/*---------------- header article styles -----------------------*/
 .header-article-container{
     text-align: center;
 }
@@ -81,9 +81,208 @@
     line-height: 23px;
     text-align: center;
     color: #FFFFFF;
-    margin: 0 870px;
+    margin-bottom: 50px;
 }
 .header-banner {
-    padding: 50px 230px;
+    padding-bottom: 45px;
 }
-/* main style */
+/*-------- main style------------ */
+/* -------- Article-1 -------------- */
+.article-1-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 85px 310px 130px 310px;
+    gap: 73px;
+}
+.article-img{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 24px;
+}
+.article-blog h3{
+    font-weight: 500;
+    font-size: 45px;
+    line-height: 53px;
+    color: #727272;
+    margin-bottom: 24px;
+}
+.article-blog h3 span{
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 53px;
+}
+.article-blog p{
+    width: 537px;
+    height: 78px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #727272;
+    margin-bottom: 32px;
+}
+/* -----------Article-2 Section-------------- */
+.article-2-container{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 240px 130px;
+    gap: 54px;
+}
+.article-2-part-1{
+    width: 586px;
+    height: 982px;
+}
+.article-2-part-2{
+    /* padding: 0 0 20px 30px; */
+    background: url(images/architect.png);
+    background-repeat: no-repeat;
+    background-position: top right;
+}
+.article-2-title h3{
+    width: 468px;
+    height: 106px;
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 53px;
+    color: #131313;
+    border-left: 6px solid #FF900E;
+    padding-left: 21px;
+    margin-bottom: 24px;
+}
+..article-2-title p{
+    width: 586px;
+    height: 78px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #727272;
+}
+.article-2-blog-container{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    margin-top: 30px;
+}
+.article-2-blog{
+    padding: 30px 42px 30px 30px;
+    background: rgba(255, 144, 14, 0.1);
+    border-radius: 5px;
+
+}
+.article-2-blog h4{
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    color: #131313;
+    margin-bottom: 10px;
+}
+.article-2-blog p{
+    color: #727272;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+}
+/* .btn-secondary{
+    background-color: #FF900E;
+    color: #fff; 
+    font-weight: 700; 
+    font-size: 65px; 
+    text-align: center; 
+    width: 342px; 
+    height: 200px;
+    border-style: none;
+    padding: 45px 42px;
+} */
+/* .btn-secondary{
+    float: bottom left;
+    padding: 50px 0 50px;
+    
+} */
+.some-facts{
+    margin-bottom: 180px;
+}
+.some-facts-title h3{
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 53px;
+    color: #131313;
+    padding-left: 240px;
+    margin-bottom: 24px;
+}
+.some-facts-title p{
+    width: 542px;
+    height: 52px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #727272;
+    padding-left: 240px;
+}
+.facts-item-container{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 100px;
+    align-items: center;
+}
+.facts-item{
+    border: 1px solid #FF900E;
+    border-radius: 8px;
+    text-align: center;
+    padding: 36px 50px;
+
+}
+.facts-item h3{
+    font-weight: 600;
+    font-size: 45px;
+    line-height: 53px;
+    color: #424242;
+    margin-bottom: 5px;
+}
+.facts-item p{
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 23px;
+    color: #727272;
+}
+/* our sponsor style */
+.our-sponsor{
+    
+    text-align: center;
+    
+}
+.our-sponsor h3{
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 53px;
+    color: #131313;
+    margin-bottom: 24px;
+}
+.our-sponsor-p{
+    /* width: 542px; */
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    margin-bottom: 50px;
+    align-items: center;
+}
+.our-sponsor-item-container{
+    display: flex;
+    justify-content: space-evenly;
+}
+/* footer style */
+.footer{ 
+    background: #FFF4E7;
+    border-radius: 8px;
+    margin: 130px 240px 216px;
+    text-align: center;
+    /* height: 100px; */
+}
+.footer p{
+    align-items: center;
+    padding: 39px 410px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 23px;
+    text-align: center;
+    color: #424242;
+}
